finishing creating user perfil

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -3,8 +3,9 @@
 <html lang="pt-br">
     {% include "global/partials/head.html" %}
 <body>
-    
+
     {% include "global/partials/header.html" %}
+    {% include "global/partials/messages.html" %}
     <main class="main-container">
         {% block content %}{% endblock content %}
     </main>
